# arva

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  LICENSE.md  README.md  arva.py  build.py  global.yml  global_path_spec.json
.github/workflows/: build_sdl.yml  build_sdl_artifact.yml  build_sdl_artifacts.yml
.github/workflows/artifacts/: sdl.yml
build_tool/: README.md  build.py  global.yml  spec.yml
build_tool/platform/: info.py
core/package/: pubspec.yaml
core/src/: core.c  core.h
dev/build_tools/: zip_archive.py
dev/sdk_tools/: dependencies.yml  main.py  messages.yml  pyproject.toml
dev/sdk_tools/case/: argument.py  build.py  clean.py  device_info.py  environment.py  messages.py
dev_tools/docs/dependencies/: sdl_requirements.md
dev_tools/scripts/: build.py  data.json  project.yml  pyproject.toml
dev_tools/scripts/script_library/: argument.py  device_info.py  persistent_data.py
docs/: sdk_architecture.md
engine/: build_engine.py
runtime/: README.md
